segunda pre entrega

--- a/institucional.html
+++ b/institucional.html
@@ -17,14 +17,29 @@
            
             <a href="./index.html" title="Inicio"><img src="./assets/logo2.png" class="logo" alt="Inicio"></a>
 
-            <nav class="menu">
-                <ul>
-                    <li><a href="./institucional.html">INSTITUCIONAL</a></li>
-                    <li><a href="./carreras.html">CARRERAS</a></li>
-                    <li><a href="./admision.html">ADMISIÓN</a></li>
-                    <li><a href="./contacto.html">CONTACTO</a></li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./institucional.html">INSTITUCIONAL</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./carreras.html">CARRERAS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./admision.html">ADMISIÓN</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
 
         </header>
 
