--- a/index.html
+++ b/index.html
@@ -17,18 +17,33 @@
            
             <a href="./index.html"><img src="./assets/logo2.png" alt="Inicio" class="logo" title="Ir a Inicio"></a>
 
-            <nav class="menu">
-                <ul>
-                    <li><a href="./institucional.html">INSTITUCIONAL</a></li>
-                    <li><a href="./carreras.html">CARRERAS</a></li>
-                    <li><a href="./admision.html">ADMISIÓN</a></li>
-                    <li><a href="./contacto.html">CONTACTO</a></li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="./institucional.html">INSTITUCIONAL</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./carreras.html">CARRERAS</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./admision.html">ADMISIÓN</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
 
         </header>
 
-<main>
+        <main>
             
                 <div class="portada">
             <img class="portada" src="./assets/portada.jpg" alt="">
